# sirius-supply-chain

./: README.md  load_embedder_model.py  load_sentiment_model.py  main.py  mlflow.md  pyproject.toml  workshop_load_untrusted_model_demo.py  yannic.py
alfa_sentiment_classifier/: build_model.py  config.json  modeling_classifier.py
mlflow/: solution.md
output/: model.sig  sbom-pip-audit.json
scan_bypasses/: build_1.py  build_2.py  load_1.py  load_2.py  load_model.py
sirius_text_embedder/: build_checkpoint.py  config.json  decompile.py
vibecoded_app/: requirements.txt
vibecoded_app/src/: command_injection.py  path_traversal.py  sensitive_data_exposure.py
workshop_trust_remote_code_model/: build_model.py  config.json  modeling_supply_chain.py
workshop_unsafe_pickled_model/: build_checkpoint.py  config.json
